manifests/tutorial/42-opal-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: opal
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
          name: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: opal
spec:
  selector:
    app: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opal-server
  namespace: opal
  labels:
    app: opal-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opal-server
  template:
    metadata:
      labels:
        app: opal-server
    spec:
      containers:
      - name: opal-server
        image: permitio/opal-server:latest
        ports:
        - containerPort: 7002
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: opal-server
  namespace: opal
spec:
  selector:
    app: opal-server
  ports:
  - name: http
    port: 7002
    targetPort: http
