manifests/tutorial/50-pep-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pep-proxy
  namespace: proxy-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pep-proxy
  template:
    metadata:
      labels:
        app: pep-proxy
    spec:
      containers:
      - name: pep-proxy
        image: pep-proxy-fastapi:local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pep-proxy
  namespace: proxy-system
spec:
  selector:
    app: pep-proxy
  ports:
  - name: http
    port: 8080
    targetPort: 8080
